--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Management System</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./Frontend/styles.css">
 </head>
 <body>
 
@@ -36,6 +36,6 @@
         </table>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./Frontend/script.js"></script>
 </body>
 </html>
